plugins {
    id 'eclipse'
    id 'idea'
    id 'maven-publish'
    id 'net.minecraftforge.gradle' version '[6.0,6.2)'
    id 'org.parchmentmc.librarian.forgegradle' version '1.+'
    id 'org.spongepowered.mixin' version '0.7.+'
}

version = mod_version
group = mod_group_id

base {
    archivesName = "AnnoyingVillagers-1.20.1"
}

java.toolchain.languageVersion = JavaLanguageVersion.of(17)

println "Java: ${System.getProperty 'java.version'}, JVM: ${System.getProperty 'java.vm.version'} (${System.getProperty 'java.vendor'}), Arch: ${System.getProperty 'os.arch'}"
minecraft {
    mappings channel: mapping_channel, version: mapping_version
    accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')

    copyIdeResources = true

    runs {
        configureEach {
            workingDirectory project.file('run')
            property 'forge.logging.markers', 'REGISTRIES'
            property 'forge.logging.console.level', 'debug'

            mods {
                "${mod_id}" {
                    source sourceSets.main
                }
            }
        }

        client {
            property 'forge.enabledGameTestNamespaces', mod_id
        }

        server {
            property 'forge.enabledGameTestNamespaces', mod_id
            args '--nogui'
        }

        gameTestServer {
            property 'forge.enabledGameTestNamespaces', mod_id
        }

        data {
            workingDirectory project.file('run-data')
            args '--mod', mod_id, '--all', '--output', file('src/generated/resources/'), '--existing', file('src/main/resources/')
        }
    }
}

sourceSets.main.resources { srcDirs = ['src/main/resources', 'src/generated/resources'] }

repositories {
    mavenCentral()
    maven {
        url = uri("https://cursemaven.com")
    }
    flatDir { dir 'libs' }
}

mixin {
    add sourceSets.main, 'annoyingvillagers.mixins.refmap.json'
    config 'annoyingvillagers.mixins.json'
}

dependencies {
    minecraft "net.minecraftforge:forge:${minecraft_version}-${forge_version}"
    implementation fg.deobf("curse.maven:epic-fight-mod-405076:8049910")
    implementation fg.deobf("curse.maven:combat-evolution-1377795:8051212")
    implementation fg.deobf("curse.maven:epicfight-clash-blade-1408812:7973024")
    implementation fg.deobf("curse.maven:epicfight-kick-skills-1521559:7966307")
    implementation fg.deobf("curse.maven:weapons-of-miracles-epicfight-918614:7517612")

    implementation fg.deobf("curse.maven:player-mobs-430513:5780869")
    implementation fg.deobf("curse.maven:aaa-particles-979809:8082320")
    implementation fg.deobf("curse.maven:architectury-api-419699:5137938")

    implementation fg.deobf("curse.maven:epicfight-nightfall-1307848:8082392")
    implementation fg.deobf("curse.maven:epic-fight-avalon-1268823:7619938")
    implementation fg.deobf("curse.maven:epic-fight-invincible-1184379:7679941")
    implementation fg.deobf("curse.maven:sword-soaring-1011068:7627333")
    implementation fg.deobf("curse.maven:epic-fight-dual-axes-1174112:7647115")
    implementation fg.deobf("curse.maven:epic-fight-dual-greatswords-updated-1224015:7647220")
    implementation fg.deobf("curse.maven:epicfight-extra-1434276:7961244")

    implementation fg.deobf("curse.maven:mmmmmmmmmmmm-225738:6860192")
    implementation fg.deobf("curse.maven:selene-499980:7541536")
    implementation fg.deobf("curse.maven:photon-871522:7501597")
    implementation fg.deobf("curse.maven:ldlib-626676:7809449")

    implementation fg.deobf("curse.maven:epicfight-resurrection-1151542:6931390")
    implementation fg.deobf("curse.maven:p1neros-epic-bow-1338443:7144823")
    implementation fg.deobf("curse.maven:epicfight-dancing-1521730:7967290")

    implementation fg.deobf("curse.maven:combat-evolution-x-more-execution-animations-1521545:8167727")
    implementation fg.deobf("curse.maven:free-cam-557076:4643128")

    compileOnly(annotationProcessor("io.github.llamalad7:mixinextras-common:0.5.0"))

    annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'
}

tasks.named('processResources', ProcessResources).configure {
    var replaceProperties = [
            minecraft_version: minecraft_version, minecraft_version_range: minecraft_version_range,
            forge_version: forge_version, forge_version_range: forge_version_range,
            loader_version_range: loader_version_range,
            mod_id: mod_id, mod_name: mod_name, mod_license: mod_license, mod_version: mod_version,
            mod_authors: mod_authors, mod_description: mod_description,
    ]
    inputs.properties replaceProperties

    filesMatching(['META-INF/mods.toml', 'pack.mcmeta']) {
        expand replaceProperties + [project: project]
    }
}
tasks.named('jar', Jar).configure {
    manifest {
        attributes([
                'Specification-Title'     : mod_id,
                'Specification-Vendor'    : mod_authors,
                'Specification-Version'   : '1', // We are version 1 of ourselves
                'Implementation-Title'    : project.name,
                'Implementation-Version'  : project.jar.archiveVersion,
                'Implementation-Vendor'   : mod_authors,
                'Implementation-Timestamp': new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
        ])
    }

    finalizedBy 'reobfJar'
}

publishing {
    publications {
        register('mavenJava', MavenPublication) {
            artifact jar
        }
    }
    repositories {
        maven {
            url "file://${project.projectDir}/mcmodsrepo"
        }
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}
